Fixed button on mobile

--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -30,7 +30,7 @@
   position: absolute;
   width: 100px;
   height: 50px;
-  margin: 12px;
+  margin-right: 12px;
   border-radius: 50px;
   right: 0px;
   border: none;
